--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "css-loader": "^2.0.0",
+    "isomorphic-style-loader": "^4.0.0",
     "nodemon": "^1.18.7",
     "npm-run-all": "^4.1.5",
+    "style-loader": "^0.23.1",
     "webpack": "^4.27.0",
     "webpack-cli": "^3.1.2",
     "webpack-merge": "^4.1.4",
