--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-http-proxy": "^1.5.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-helmet": "^5.2.0",
     "react-redux": "^6.0.0",
     "react-router-config": "^4.4.0-beta.6",
     "react-router-dom": "^4.3.1",
