--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^2.0.0",
+    "html-minifier": "^3.5.21",
     "isomorphic-style-loader": "^4.0.0",
     "nodemon": "^1.18.7",
     "npm-run-all": "^4.1.5",
