--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm run build:server && npm run build:client",
+    "build": "npm-run-all --parallel build:*",
     "dev": "npm-run-all --parallel dev:*",
-    "dev:server": "webpack --config ./build/webpack.server.js --watch",
-    "dev:client": "webpack --config ./build/webpack.client.js --watch",
-    "dev:start": "sleep 5 && nodemon --watch dist --exec  node ./dist/server.js"
+    "dev:server": "webpack --mode=development --config ./build/webpack.server.js --watch",
+    "dev:client": "webpack --mode=development --config ./build/webpack.client.js --watch",
+    "dev:start": "cd dist && sleep 5 && nodemon --watch ./ --exec node ./server.js",
+    "build:server": "webpack --mode=production --config ./build/webpack.server.js",
+    "build:client": "webpack --mode=production --config ./build/webpack.client.js"
   },
-  "keywords": [],
+  "keywords": [
+    "ssr"
+  ],
   "author": "yhlben",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "express-http-proxy": "^1.5.0",
+    "less": "^3.9.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
@@ -31,9 +36,11 @@
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.0.0",
     "html-minifier": "^3.5.21",
     "isomorphic-style-loader": "^4.0.0",
+    "less-loader": "^4.1.0",
     "nodemon": "^1.18.7",
     "npm-run-all": "^4.1.5",
     "style-loader": "^0.23.1",
