--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "build": "npm-run-all --parallel build:*",
     "dev": "npm-run-all --parallel dev:*",
-    "dev:server": "webpack --mode=development --config ./build/webpack.server.js --watch",
-    "dev:client": "webpack --mode=development --config ./build/webpack.client.js --watch",
+    "dev:server": "cross-env NODE_ENV=development webpack --config ./build/webpack.server.js",
+    "dev:client": "cross-env NODE_ENV=development webpack --mode=development --config ./build/webpack.client.js",
     "dev:start": "cd dist && sleep 5 && nodemon --watch ./ --exec node ./server.js",
-    "build:server": "webpack --mode=production --config ./build/webpack.server.js",
-    "build:client": "webpack --mode=production --config ./build/webpack.client.js"
+    "build:server": "cross-env NODE_ENV=production webpack --config ./build/webpack.server.js",
+    "build:client": "cross-env NODE_ENV=production webpack --config ./build/webpack.client.js"
   },
   "keywords": [
     "ssr"
@@ -37,13 +37,16 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
     "copy-webpack-plugin": "^4.6.0",
+    "cross-env": "^5.2.0",
     "css-loader": "^2.0.0",
     "html-minifier": "^3.5.21",
     "isomorphic-style-loader": "^4.0.0",
     "less-loader": "^4.1.0",
     "nodemon": "^1.18.7",
     "npm-run-all": "^4.1.5",
+    "qiniu-upload-plugin": "^1.1.4",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.27.0",
     "webpack-cli": "^3.1.2",
     "webpack-merge": "^4.1.4",
