--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-ssr-demo",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "React 服务器端渲染 Demo",
   "main": "index.js",
   "scripts": {
@@ -12,54 +12,54 @@
     "build:server": "cross-env NODE_ENV=production webpack --config ./build/webpack.server.js",
     "build:client": "cross-env NODE_ENV=production webpack --config ./build/webpack.client.js",
     "serve": "cd dist &&  nodemon ./server.js",
-    "lint": "eslint src --fix"
+    "lint": "eslint src build --fix"
   },
   "keywords": [
-    "ssr"
+    "ssr",
+    "服务器端渲染"
   ],
   "author": "yhlben",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.4",
-    "express-http-proxy": "^1.5.0",
+    "express-http-proxy": "^1.5.1",
     "less": "^3.9.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
-    "react-redux": "^6.0.0",
+    "react-redux": "^6.0.1",
     "react-router-config": "^4.4.0-beta.6",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "prop-types": "^15.6.2",
-    "webpack-merge": "^4.1.4",
-    "copy-webpack-plugin": "^4.6.0",
+    "prop-types": "^15.7.2",
+    "webpack-merge": "^4.2.1",
+    "copy-webpack-plugin": "^5.0.1",
     "webpack-node-externals": "^1.7.2",
+    "isomorphic-style-loader": "^5.0.1",
+    "qiniu-upload-plugin": "^1.2.5",
     "html-minifier": "^3.5.21"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.2.1",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.5",
     "cross-env": "^5.2.0",
-    "css-loader": "^2.0.0",
-    "eslint": "^5.10.0",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.15.1",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
-    "isomorphic-style-loader": "^4.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "less-loader": "^4.1.0",
-    "nodemon": "^1.18.7",
+    "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5",
-    "qiniu-upload-plugin": "^1.2.4",
-    "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.27.0",
-    "webpack-cli": "^3.1.2"
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3"
   }
 }
